--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </ul>
     <ul>
         <ul>
-            <a href="Front-End/HTML.html" target="_blank"><li>HTML</li></a>
+            <a href="HTML.html" target="_blank"><li>HTML</li></a>
             <a href="Front-End/CSS.html" target="_blank"><li>CSS</li></a>
             <a href="Front-End/JavaScript.html" target="_blank"><li>JavaScript</li></a>
             <a href="Front-End/BootStrap.html" target="_blank"><li>BootStrap</li></a>
