--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </ul>
     <ul>
         <ul>
-            <a href="Front-End/HTML.html" target="_blank"><li>HTML</li></a>
-            <a href="Front-End/CSS.html" target="_blank"><li>CSS</li></a>
-            <a href="Front-End/JavaScript.html" target="_blank"><li>JavaScript</li></a>
-            <a href="Front-End/BootStrap.html" target="_blank"><li>BootStrap</li></a>
+            <a href="./Front-End/HTML.html" target="_blank"><li>HTML</li></a>
+            <a href="./Front-End/CSS.html" target="_blank"><li>CSS</li></a>
+            <a href="./Front-End/JavaScript.html" target="_blank"><li>JavaScript</li></a>
+            <a href="./Front-End/BootStrap.html" target="_blank"><li>BootStrap</li></a>
         </ul>
     </ul>
 
