--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     </ul>
     <ul>
         <ul>
-            <a href="Back-End/Python.html" target="_blank"><li>Python</li></a>
-            <a href="Back-End/Java.html" target="_blank"><li>Java</li></a>
-            <a href="Front-End/JavaScript.html" target="_blank"><li>JavaScript</li>
-            <a href="Back-End/Frameworks.html" target="_blank"><li>Frameworks</li></a>
+            <a href="./Back-End/Python.html" target="_blank"><li>Python</li></a>
+            <a href="./Back-End/Java.html" target="_blank"><li>Java</li></a>
+            <a href="./Front-End/JavaScript.html" target="_blank"><li>JavaScript</li>
+            <a href="./Back-End/Frameworks.html" target="_blank"><li>Frameworks</li></a>
             <ul>
-                <a href="Back-End/Framework/Django.html" target="_blank"><li>Django</li></a>
-                <a href="Back-End/Framework/Nodejs.html" target="_blank"><li>Node.js</li></a>
-                <a href="Back-End/Framework/Spring.html" target="_blank"><li>Spring</li></a>
+                <a href="./Back-End/Framework/Django.html" target="_blank"><li>Django</li></a>
+                <a href="./Back-End/Framework/Nodejs.html" target="_blank"><li>Node.js</li></a>
+                <a href="./Back-End/Framework/Spring.html" target="_blank"><li>Spring</li></a>
             </ul>
         </ul>
     </ul>
@@ -39,8 +39,8 @@
     </ul>
     <ul>
         <ul>
-            <a href="Databases/Sql.html" target="_blank"><li>Structured Query Language</li></a>
-            <a href="Databases/MongoDB.html" target="_blank"><li>MongoDB</li></a>
+            <a href="./Databases/Sql.html" target="_blank"><li>Structured Query Language</li></a>
+            <a href="./Databases/MongoDB.html" target="_blank"><li>MongoDB</li></a>
         </ul>
     </ul>
 </body>
