--- a/Front-End/BootStrap.html
+++ b/Front-End/BootStrap.html
@@ -10,6 +10,6 @@
     <p>Bootstrap is a popular front-end framework for developing responsive and mobile-first websites. 
         It provides a collection of CSS and JavaScript components that help developers create visually appealing 
         and functional web pages quickly.</p>
-    <img src="./Bootstrap.jpeg" alt="Bootstrap Logo">
+    <img src="./bootstrap.jpeg" alt="Bootstrap Logo">
 </body>
 </html>
