--- a/Back-End/Python.html
+++ b/Back-End/Python.html
@@ -9,6 +9,6 @@
     <h1>Python</h1>
     <p>Python is a high-level, interpreted programming language known for its readability and versatility. 
         It is widely used in web development, data analysis, artificial intelligence, scientific computing, and more.</p>
-    <img src="python.jpeg" alt="Python Logo">
+    <img src="./python.jpeg" alt="Python Logo">
 </body>
 </html>
