--- a/Back-End/Java.html
+++ b/Back-End/Java.html
@@ -9,6 +9,6 @@
     <h1>Java</h1>
     <p>Java is a high-level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible. 
         It is widely used for building enterprise-scale applications, mobile applications (especially Android), and web applications.</p>
-    <img src="Java.png" alt="Java Logo">
+    <img src="java.png" alt="">
 </body>
 </html>
